--- a/index.html
+++ b/index.html
@@ -4,41 +4,126 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Download Instagram Reels, Stories, Posts and more with SocialSaver - Fast and Free!">
-  <title>SocialSaver - Download Reels, Stories, Posts</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <title>SocialSaver - Download Instagram Reels, Stories & Posts</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Poppins', sans-serif;
+    }
+    body {
+      background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
+      color: #fff;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
+    }
+    header {
+      text-align: center;
+      margin-top: 30px;
+    }
+    header h1 {
+      font-size: 3rem;
+      color: #ffffff;
+    }
+    header p {
+      font-size: 1.1rem;
+      margin-top: 10px;
+      color: #d0d0d0;
+    }
+    .card {
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(15px);
+      border-radius: 16px;
+      padding: 30px;
+      max-width: 500px;
+      width: 100%;
+      margin: 30px auto;
+      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+      transition: 0.3s ease;
+    }
+    .card:hover {
+      transform: scale(1.02);
+    }
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    input {
+      width: 100%;
+      padding: 12px;
+      font-size: 1rem;
+      border-radius: 8px;
+      border: none;
+      margin-bottom: 15px;
+    }
+    button {
+      width: 100%;
+      padding: 12px;
+      background: linear-gradient(90deg, #00d2ff, #3a47d5);
+      color: white;
+      font-size: 1rem;
+      font-weight: bold;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+    button:hover {
+      background: linear-gradient(90deg, #3a47d5, #00d2ff);
+    }
+    #instaResult {
+      margin-top: 20px;
+      text-align: center;
+    }
+    section.how-to, section.note {
+      max-width: 600px;
+      margin: 20px auto;
+      text-align: left;
+      color: #ccc;
+    }
+    footer {
+      margin-top: auto;
+      padding: 20px;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #aaa;
+    }
+  </style>
 </head>
 <body>
+
   <header>
-    <h1>SocialSaver</h1>
-    <p>Download Instagram Reels, Stories, and Posts – Fast & Free</p>
+    <h1>📥 SocialSaver</h1>
+    <p>Fast & Free Instagram Reels, Story, and Post Downloader</p>
   </header>
 
-  <main>
-    <section class="downloader">
-      <h2>Instagram Downloader</h2>
-      <input type="text" placeholder="Paste Instagram link here..." id="instaInput">
-      <button onclick="downloadInsta()">Download</button>
-      <div id="instaResult"></div>
-    </section>
+  <div class="card">
+    <h2>Instagram Downloader</h2>
+    <input type="text" placeholder="Paste Instagram link here..." id="instaInput">
+    <button onclick="downloadInsta()">Download</button>
+    <div id="instaResult"></div>
+  </div>
 
-    <section class="how-to">
-      <h3>How to Use?</h3>
-      <ol>
-        <li>Go to Instagram and copy the link of the reel/story/post.</li>
-        <li>Paste it into the box above.</li>
-        <li>Click on "Download" and wait for it to process.</li>
-      </ol>
-    </section>
+  <section class="how-to">
+    <h3>How to Use?</h3>
+    <ol>
+      <li>Copy the link of the reel, story, or post from Instagram.</li>
+      <li>Paste it into the box above.</li>
+      <li>Click "Download" and wait for the result.</li>
+    </ol>
+  </section>
 
-    <section class="note">
-      <p><strong>Note:</strong> This tool does not host any content. All content is served via Instagram’s public embed feature.</p>
-    </section>
-  </main>
+  <section class="note">
+    <p><strong>Note:</strong> This tool uses Instagram's embed feature. We do not store any media on our server.</p>
+  </section>
 
   <footer>
-    <p>&copy; 2025 SocialSaver. All rights reserved.</p>
+    <p>&copy; 2025 SocialSaver. Made with ❤️</p>
   </footer>
 
   <script>
@@ -46,16 +131,22 @@
       const input = document.getElementById("instaInput").value;
       const result = document.getElementById("instaResult");
       if (input.includes("instagram.com")) {
-        result.innerHTML = `<iframe src="https://www.instagram.com/p/${extractCode(input)}/embed" width="400" height="480" frameborder="0" scrolling="no" allowtransparency="true"></iframe>`;
+        const code = extractCode(input);
+        if (code) {
+          result.innerHTML = \`<iframe src="https://www.instagram.com/p/\${code}/embed" width="400" height="480" frameborder="0" scrolling="no" allowtransparency="true"></iframe>\`;
+        } else {
+          result.innerHTML = "<p>⚠️ Could not extract video code. Try a different link.</p>";
+        }
       } else {
-        result.innerHTML = "<p>Please enter a valid Instagram URL.</p>";
+        result.innerHTML = "<p>❌ Please enter a valid Instagram URL.</p>";
       }
     }
 
-    function extractCode(url) {a
-      const matches = url.match(/instagram\.com\/(p|reel|tv)\/([a-zA-Z0-9-_]+)/);
-      return matches ? matches[2] : "";
+    function extractCode(url) {
+      const match = url.match(/instagram\\.com\\/(p|reel|tv)\\/([\\w-]+)/);
+      return match ? match[2] : null;
     }
   </script>
+
 </body>
 </html>
