--- a/index.html
+++ b/index.html
@@ -3,150 +3,149 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Download Instagram Reels, Stories, Posts and more with SocialSaver - Fast and Free!">
-  <title>SocialSaver - Download Instagram Reels, Stories & Posts</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <meta name="description" content="Download Reels, Stories, Videos from Instagram, Facebook and YouTube. Fast and free video downloader by SocialSaver.">
+  <meta name="keywords" content="Instagram Downloader, Facebook Video Downloader, Story Download, YouTube Video Download">
+  <meta name="author" content="SocialSaver">
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/9652/9652994.png" type="image/png">
+  <title>SocialSaver - Instagram, Facebook, YouTube Video Downloader</title>
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: 'Poppins', sans-serif;
-    }
     body {
-      background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
       color: #fff;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 20px;
     }
     header {
+      background: #111827;
       text-align: center;
-      margin-top: 30px;
+      padding: 2rem 1rem;
+      border-bottom: 2px solid #3b82f6;
+    }
+    header img {
+      width: 70px;
     }
     header h1 {
-      font-size: 3rem;
-      color: #ffffff;
+      font-size: 2.2rem;
+      margin: 0.5rem 0 0.2rem;
+      color: #60a5fa;
     }
     header p {
-      font-size: 1.1rem;
-      margin-top: 10px;
-      color: #d0d0d0;
-    }
-    .card {
-      background: rgba(255, 255, 255, 0.1);
-      backdrop-filter: blur(15px);
-      border-radius: 16px;
-      padding: 30px;
-      max-width: 500px;
-      width: 100%;
-      margin: 30px auto;
-      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-      transition: 0.3s ease;
-    }
-    .card:hover {
-      transform: scale(1.02);
-    }
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    input {
-      width: 100%;
-      padding: 12px;
       font-size: 1rem;
-      border-radius: 8px;
+      color: #cbd5e1;
+    }
+    .section {
+      max-width: 720px;
+      background: #1e293b;
+      padding: 2rem;
+      margin: 2rem auto;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    }
+    .section h2 {
+      font-size: 1.5rem;
+      border-left: 5px solid #3b82f6;
+      padding-left: 10px;
+    }
+    input[type="text"] {
+      width: 100%;
+      padding: 0.75rem;
       border: none;
-      margin-bottom: 15px;
+      border-radius: 6px;
+      margin-top: 10px;
+      font-size: 1rem;
+      background: #334155;
+      color: white;
     }
     button {
-      width: 100%;
-      padding: 12px;
-      background: linear-gradient(90deg, #00d2ff, #3a47d5);
-      color: white;
+      margin-top: 10px;
+      padding: 10px 20px;
       font-size: 1rem;
-      font-weight: bold;
       border: none;
-      border-radius: 8px;
+      border-radius: 6px;
+      background: #3b82f6;
+      color: white;
+      font-weight: bold;
       cursor: pointer;
-      transition: background 0.3s ease;
     }
-    button:hover {
-      background: linear-gradient(90deg, #3a47d5, #00d2ff);
-    }
-    #instaResult {
-      margin-top: 20px;
-      text-align: center;
-    }
-    section.how-to, section.note {
-      max-width: 600px;
+    iframe {
+      display: block;
       margin: 20px auto;
-      text-align: left;
-      color: #ccc;
+      width: 100%;
+      max-width: 500px;
+      height: 480px;
+      border: none;
     }
     footer {
-      margin-top: auto;
-      padding: 20px;
       text-align: center;
-      font-size: 0.9rem;
-      color: #aaa;
+      background: #0f172a;
+      color: #9ca3af;
+      padding: 1rem;
+      margin-top: 3rem;
     }
   </style>
 </head>
 <body>
-
   <header>
-    <h1>📥 SocialSaver</h1>
-    <p>Fast & Free Instagram Reels, Story, and Post Downloader</p>
+    <img src="https://cdn-icons-png.flaticon.com/512/9652/9652994.png" alt="Logo">
+    <h1>SocialSaver</h1>
+    <p>Download Reels, Stories & Videos from Instagram, Facebook & YouTube</p>
   </header>
 
-  <div class="card">
-    <h2>Instagram Downloader</h2>
-    <input type="text" placeholder="Paste Instagram link here..." id="instaInput">
-    <button onclick="downloadInsta()">Download</button>
+  <section class="section">
+    <h2>📸 Instagram Downloader</h2>
+    <input type="text" id="instaInput" placeholder="Paste Instagram URL">
+    <button onclick="downloadInstagram()">Download</button>
     <div id="instaResult"></div>
-  </div>
-
-  <section class="how-to">
-    <h3>How to Use?</h3>
-    <ol>
-      <li>Copy the link of the reel, story, or post from Instagram.</li>
-      <li>Paste it into the box above.</li>
-      <li>Click "Download" and wait for the result.</li>
-    </ol>
   </section>
 
-  <section class="note">
-    <p><strong>Note:</strong> This tool uses Instagram's embed feature. We do not store any media on our server.</p>
+  <section class="section">
+    <h2>📘 Facebook Downloader</h2>
+    <input type="text" id="fbInput" placeholder="Paste Facebook URL">
+    <button onclick="downloadFacebook()">Download</button>
+    <div id="fbResult"></div>
+  </section>
+
+  <section class="section">
+    <h2>▶️ YouTube Downloader</h2>
+    <input type="text" id="ytInput" placeholder="Paste YouTube URL">
+    <button onclick="downloadYouTube()">Go to Downloader</button>
   </section>
 
   <footer>
-    <p>&copy; 2025 SocialSaver. Made with ❤️</p>
+    <p>&copy; 2025 SocialSaver. All rights reserved.</p>
   </footer>
 
   <script>
-    function downloadInsta() {
-      const input = document.getElementById("instaInput").value;
-      const result = document.getElementById("instaResult");
-      if (input.includes("instagram.com")) {
-        const code = extractCode(input);
-        if (code) {
-          result.innerHTML = \`<iframe src="https://www.instagram.com/p/\${code}/embed" width="400" height="480" frameborder="0" scrolling="no" allowtransparency="true"></iframe>\`;
-        } else {
-          result.innerHTML = "<p>⚠️ Could not extract video code. Try a different link.</p>";
-        }
+    function downloadInstagram() {
+      const url = document.getElementById('instaInput').value;
+      const match = url.match(/(?:instagram\.com\/p\/|reel\/|tv\/)([\w-]+)/);
+      const result = document.getElementById('instaResult');
+      if (match) {
+        const code = match[1];
+        result.innerHTML = `<iframe src="https://www.instagram.com/p/${code}/embed" allowtransparency="true"></iframe>`;
       } else {
-        result.innerHTML = "<p>❌ Please enter a valid Instagram URL.</p>";
+        result.innerHTML = '<p style="color:red;">❌ Invalid Instagram URL</p>';
       }
     }
 
-    function extractCode(url) {
-      const match = url.match(/instagram\\.com\\/(p|reel|tv)\\/([\\w-]+)/);
-      return match ? match[2] : null;
+    function downloadFacebook() {
+      const url = document.getElementById('fbInput').value;
+      const result = document.getElementById('fbResult');
+      if (url.includes("facebook.com")) {
+        result.innerHTML = `<iframe src="https://www.facebook.com/plugins/video.php?href=${encodeURIComponent(url)}" style="height:480px;" allowfullscreen></iframe>`;
+      } else {
+        result.innerHTML = '<p style="color:red;">❌ Invalid Facebook URL</p>';
+      }
+    }
+
+    function downloadYouTube() {
+      const url = document.getElementById('ytInput').value;
+      if (url.includes("youtube.com") || url.includes("youtu.be")) {
+        window.open(`https://yt5s.io/en?q=${encodeURIComponent(url)}`, '_blank');
+      } else {
+        alert("❌ Invalid YouTube URL");
+      }
     }
   </script>
-
 </body>
 </html>
